testsuite/escript/misc/rpterr.err
rpterr.src:6:5: error: Unknown identifier 'foox'.