testsuite/escript/misc/rpterr.src

print( "hello world" );

repeat
  foox;
until i < 5;
